--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -69,21 +69,21 @@
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout_8">
                <item>
-                <widget class="QRadioButton" name="radioButton">
+                <widget class="QCheckBox" name="checkBox">
                  <property name="text">
                   <string>读取</string>
                  </property>
                 </widget>
                </item>
                <item>
-                <widget class="QRadioButton" name="radioButton_2">
+                <widget class="QCheckBox" name="checkBox_2">
                  <property name="text">
                   <string>写入</string>
                  </property>
                 </widget>
                </item>
                <item>
-                <widget class="QRadioButton" name="radioButton_3">
+                <widget class="QCheckBox" name="checkBox_3">
                  <property name="text">
                   <string>执行</string>
                  </property>
