--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>443</width>
-    <height>506</height>
+    <width>431</width>
+    <height>543</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -150,10 +150,13 @@
                <property name="orientation">
                 <enum>Qt::Orientation::Horizontal</enum>
                </property>
+               <property name="sizeType">
+                <enum>QSizePolicy::Policy::Fixed</enum>
+               </property>
                <property name="sizeHint" stdset="0">
                 <size>
-                 <width>40</width>
-                 <height>20</height>
+                 <width>93</width>
+                 <height>28</height>
                 </size>
                </property>
               </spacer>
@@ -595,7 +598,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>443</width>
+     <width>431</width>
      <height>33</height>
     </rect>
    </property>
